# internal/delivery/router/matrix.go
@@ -4,7 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/jmoiron/sqlx"
 	"go.opentelemetry.io/otel/trace"
-	handlers "template/internal/delivery/handelrs"
+	handlers "template/internal/delivery/handlers"
 	"template/internal/repository"
 	"template/internal/service"
 	"template/pkg/log"
@@ -18,6 +18,7 @@ func RegisterMatrixUser(r *gin.Engine, db *sqlx.DB, logger *log.Logs, tracer tra
 	matrixService := service.InitMatrixService(matrixRepo)
 	matrixHandlers := handlers.InitMatrixHandler(matrixService, tracer)
 
+	matrixRouter.GET("/get_difference", matrixHandlers.GetDifference)
 	matrixRouter.POST("/create", matrixHandlers.CreateMatrix)
 	matrixRouter.PUT("/get_history", matrixHandlers.GetHistory)
 
